--- a/.github/config.yml
+++ b/.github/config.yml
@@ -3,7 +3,7 @@
 # *OPTIONAL* Comment to reply with
 # Can be either a string :
 requestInfoReplyComment: >
-  We would appreciate it if you could provide us with more info about this issue/pr!
+  Hey there. You need to provide more information. Cant leave the description field blank.
 
 # Or an array:
 # requestInfoReplyComment:
